# CardGame

./: .gitignore  CMakeLists.txt  DEBUG.md  README.md  problems.md  target.md
src/: Card.cpp  Card.h  CardEditDialog.cpp  CardEditDialog.h  CardManager.cpp  CardManager.h  CardTable.cpp  CardTable.h  CardWidget.cpp  CardWidget.h  Deck.cpp  Deck.h  DeckManager.cpp  DeckManager.h  DeckRepository.cpp  DeckRepository.h  DeckSelectionDialog.cpp  DeckSelectionDialog.h  LatexParser.cpp  LatexParser.h  LatexRenderer.cpp  LatexRenderer.h  MainWindow.cpp  MainWindow.h  main.cpp
test/: CMakeLists.txt
